jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - name: http       # Add a unique name for the HTTP port
    port: 8080
    targetPort: 8080
    nodePort: 32000  # Accessible at <NodeIP>:32000
  - name: agent      # Add a unique name for the agent port
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
